# kvmet

./: .gitignore  404.html  CNAME  README.md  _config.yml  index.html  index.md  kvmet.geany  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml
_includes/: footer.html  header.html
_layouts/: default.html  modern.html
about/: index.html
about/CHANGELOG/: index.html
about/CHANGELOG_TEMPLATE/: index.html
assets/css/: default.css  modern.css  styles.css
assets/fonts/: LICENSE.md
curate/: index.md  macos_finder.md  movies.md
cv/: index.html
docs/: CHANGELOG.md  CHANGELOG_TEMPLATE.md  general-rules.md  index.md  kits.md  plane.md  quotes.md
docs/about/: CHANGELOG_TEMPLATE.md  about.md  index.md
docs/cv/: cv.md  index.md
docs/meta/: meta.md
docs/photo/: 2015-11-29.md  2022-05-30.md  2023-12-23.md  2023-12-27.md  2023-12-29.md  23-12-23_PhotoWalk.md
docs/projects/: index.md
docs/radio/: ham-radio.md
docs/sets/: camping-gear.md  first-aid-kit.md  foss.md  movies.md  peeves.md  tv-series.md
docs/toki-pona/: 3d-printing.md  decision-making.md  food.md  luka-tu-suno.md  plane.md  zine.md
docs/vector-match/: determining-similarity.md
image/: index.md
inc/: main.css
javascripts/: katex.js
make/: index.md
notes/: poly.md
now/: 2024-12-28.md  2025-01-15.md  index.md
projects/: index.html
search/: search_index.json
sets/: index.html
site/: 404.html  sitemap.xml
superchron/: Cargo.toml
superchron/docs/: dev.md
superchron/src/: main.rs
swarm-logic/: swarm-logic.md
test/: index.md
voting/: voting-references.md  voting.md
(+69 files in other folders)
