[package]
name = "superchron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = "4.5.6"
crossbeam = "0.8.4"
libloading = "0.8.3"
rusqlite = "0.31.0"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
